Enable MIDI creation

--- a/Code/Scores.ipynb
+++ b/Code/Scores.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from music21 import converter, instrument, clef, stream, analysis"
+    "from music21 import converter, instrument, clef, stream, analysis, midi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -41,11 +41,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "pygame 2.6.1 (SDL 2.28.4, Python 3.11.5)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n",
       "G2\n"
      ]
     }
    ],
    "source": [
+    "# TODO: Save phrases within a stream (instead of pickle)\n",
+    "\n",
     "bassoon = instrument.Bassoon()\n",
     "print(bassoon.lowestNote.ps, bassoon.highestNote)\n",
     "\n",
@@ -61,6 +65,14 @@
     "\n",
     "shiftOctave(toy, -2)\n",
     "toy.show()\n",
+    "\n",
+    "sp = midi.realtime.StreamPlayer(toy)\n",
+    "sp.play()\n",
+    "\n",
+    "mf = midi.translate.streamToMidiFile(toy)\n",
+    "mf.open('toy.mid', 'wb')\n",
+    "mf.write()\n",
+    "mf.close()\n",
     "\n",
     "print(pitchMin)"
    ]
