--- a/Code/CompareToClassical.ipynb
+++ b/Code/CompareToClassical.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,10 @@
     "phrases = pickle.load(open(path + \"phrases.pkl\", \"rb\"))\n",
     "G = nx.read_graphml(path + \"graph.graphml\")\n",
     "embedding = json.load(open(path + \"embedding.json\", \"r\"))\n",
-    "qa = FixedEmbeddingComposite(DWaveSampler(), embedding)"
+    "qa = FixedEmbeddingComposite(DWaveSampler(), embedding)\n",
+    "\n",
+    "# Re-record samples with lower chain strength and anneal time\n",
+    "# Ignore low energy samples that don't fulfil constraints"
    ]
   },
   {
