Compare to classical for different problem sizes

--- a/Code/CompareToClassical.ipynb
+++ b/Code/CompareToClassical.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
     "from qubo import createBQM\n",
     "from sampleAnalysis import duplicates, findOverlaps, totalEntropy\n",
     "\n",
-    "identifier = \"Haydn-3\"\n",
+    "identifier = \"Haydn-2\"\n",
     "path = f\"../Pickles/{identifier}/{identifier}_\"\n",
     "\n",
     "instruments = json.load(open(path + \"instruments.json\"))\n",
@@ -91,13 +91,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "200 reads recorded!\n",
+      "400 reads recorded!\n",
+      "600 reads recorded!\n",
+      "800 reads recorded!\n",
+      "1000 reads recorded!\n",
+      "1200 reads recorded!\n",
+      "1400 reads recorded!\n",
+      "1600 reads recorded!\n",
+      "1800 reads recorded!\n",
+      "2000 reads recorded!\n",
+      "200 reads recorded!\n",
+      "400 reads recorded!\n",
+      "600 reads recorded!\n",
+      "800 reads recorded!\n",
+      "1000 reads recorded!\n",
+      "1200 reads recorded!\n",
+      "1400 reads recorded!\n",
+      "1600 reads recorded!\n",
+      "1800 reads recorded!\n",
+      "2000 reads recorded!\n",
       "200 reads recorded!\n",
       "400 reads recorded!\n",
       "600 reads recorded!\n",
@@ -163,9 +183,9 @@
     "\n",
     "readRange = np.arange(200,2001,200)\n",
     "\n",
-    "recordEnergyReads(readRange, bqm, qa, path+\"qa-reads-opt.csv\", quantum=True)\n",
-    "#recordEnergyReads(readRange, bqm, sa, path+\"sa-reads.csv\", quantum=False)\n",
-    "#recordEnergyReads(readRange, bqm, sd, path+\"sd-reads.csv\", quantum=False)"
+    "recordEnergyReads(readRange, bqm, qa, path+\"qa-reads.csv\", quantum=True)\n",
+    "recordEnergyReads(readRange, bqm, sa, path+\"sa-reads.csv\", quantum=False)\n",
+    "recordEnergyReads(readRange, bqm, sd, path+\"sd-reads.csv\", quantum=False)"
    ]
   },
   {
