Look for bigger scores

--- a/Code/QIRBEE.ipynb
+++ b/Code/QIRBEE.ipynb
@@ -381,35 +381,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Classical\n",
-    "\n",
-    "no_reads = range(1000, 20001, 1000)\n",
-    "\n",
-    "bqm = createBQM(G, phrases, instruments, 1, 12, 1)\n",
-    "\n",
-    "for total_reads in no_reads:\n",
-    "\n",
-    "    sampleset = SimulatedAnnealingSampler().sample(bqm, num_reads=total_reads)\n",
-    "\n",
-    "    A = annotateSampleGraph(sampleset.first.sample, G)\n",
-    "\n",
-    "    new_row = pd.DataFrame({\n",
-    "        \"Total reads\": [total_reads],\n",
-    "        \"Lowest energy\": [bqm.energy(sampleset.first.sample)],\n",
-    "        \"Overlaps\": [findOverlaps(A)],\n",
-    "        \"Total entropy\": [totalEntropy(A)]\n",
-    "        })\n",
-    "\n",
-    "    new_row.to_csv(path+\"simulated.csv\", index=False, mode=\"a\", header=False)\n",
-    "    print(f\"Recorded {total_reads} reads\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# QPU\n",
     "\n",
     "no_reads = range(6000, 20001, 1000)\n",
@@ -493,70 +464,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sampler = SimulatedAnnealingSampler()\n",
-    "reads = 1000\n",
-    "\n",
-    "results = sampler.sample(bqm, num_reads=reads)\n",
-    "df = results.to_pandas_dataframe(True)\n",
-    "\n",
-    "plotSampleGraph(df[\"sample\"][0], G)\n",
-    "\n",
-    "plotArrangement(df[\"sample\"][0], phrases, instruments)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solve classically\n",
-    "\n",
-    "sd = SteepestDescentSolver()\n",
-    "sa = SimulatedAnnealingSampler()\n",
-    "\n",
-    "# Compare energies from different methods\n",
-    "# Just because it doesn't crash doesn't mean it passed\n",
-    "\n",
-    "for reads in no_reads:\n",
-    "    for _ in range(5):\n",
-    "        results = sa.sample(bqm, num_reads=reads)\n",
-    "        new_row = pd.DataFrame({\n",
-    "            \"Total reads\": [reads],\n",
-    "            \"Lowest energy\": [results.first.energy],\n",
-    "        })\n",
-    "\n",
-    "        new_row.to_csv(path + \"simulated.csv\", index=False, mode=\"a\", header=False)\n",
-    "\n",
-    "    print(f\"Recorded {reads} reads\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(results.info.keys())\n",
-    "print(results.info[\"embedding_context\"][\"chain_strength\"])\n",
-    "print(results.info[\"timing\"][\"qpu_anneal_time_per_sample\"])\n",
-    "print(results.info[\"timing\"][\"qpu_access_time\"])\n",
-    "print(results.info[\"timing\"])\n",
-    "print(results.first.energy)\n",
-    "print(bqm.energy(results.first.sample))\n",
-    "print(results.first.sample)\n",
-    "print(results.first.chain_break_fraction)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plotHistogram(df)\n",
-    "print(df.head())\n",
-    "print(bqm.energy(df[\"sample\"][0]))"
+    "print(sampleset.info.keys())\n",
+    "print(sampleset.info[\"embedding_context\"][\"chain_strength\"])\n",
+    "print(sampleset.info[\"timing\"][\"qpu_anneal_time_per_sample\"])\n",
+    "print(sampleset.info[\"timing\"][\"qpu_access_time\"])\n",
+    "print(sampleset.info[\"timing\"])\n",
+    "print(sampleset.first.energy)\n",
+    "print(bqm.energy(sampleset.first.sample))\n",
+    "print(sampleset.first.sample)\n",
+    "print(sampleset.first.chain_break_fraction)"
    ]
   },
   {
@@ -589,7 +505,7 @@
     "#arrangement.write(fmt=\"musicxml.pdf\", fp=\"../Figures/poly.pdf\", dpi=300)\n",
     "\n",
     "# DONE: Bias selection of phrases to specific parts by entropy\n",
-    "# TODO: Octave shift phrases to fit within instrument ranges\n",
+    "# DONE: Octave shift phrases to fit within instrument ranges\n",
     "# TODO: Analytic Lagrange parameter analysis\n",
     "# TODO: Add meaningful edge weightings\n",
     "# TODO: Are there more efficient ways to add constraints?\n",
@@ -616,7 +532,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
